nginx-ingress/app/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: app-deploy
  template:
    metadata:
      labels:
        name: app-deploy
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - app-deploy
                topologyKey: kubernetes.io/hostname
              weight: 100
      imagePullSecrets:
        - name: xxxx-token # Change this with your registry hosting, ex : github-token, gitlab-token, dockerhub-token
      containers:
        - name: app-deploy
          # image: docker.io/<username>/<repository>:latest
          # image: registry.gitlab.com/<username>/<repository>:latest
          image: ghcr.io/<username>/<repository>:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 500M
            requests:
              cpu: 200m
              memory: 300M
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 15
            tcpSocket:
              port: 80
            timeoutSeconds: 30
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    name: app-deploy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  # externalTrafficPolicy: Cluster
  # type: LoadBalancer
